se realiza un evento al precionar los botones DashBoad y ButtonMovie al parecer anteriormente no se ejecutaba muy bien la funcion designada el boton (buttonMovie) porque se ejecutaba el evento antes de que los elementos llamados estuvieran cargados completamente en le DOM, al realizar adecuadamente este cambion la APP funionada como se diseño

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "node-fetch": "^2.7.0",
     "node-instagram": "^4.3.0",
     "social-post-api": "^1.1.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
